--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <body>
-  <h1>Andrzej nie żuje</h1>
+  <h1>Andrzej nie żyje</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
